<resources>
    <string name="app_name">FlexTasker</string>

    <string name="default_list_name">My tasks</string>
    <string name="new_task">New task</string>
    <string name="settings">Settings</string>
    <string name="newTask">New task</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="starred">Starred</string>
    <string name="create_list">Create new list</string>
    <string name="edit_list_name">Edit list name</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_task_list_dialog_title">Delete task list?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="delete_task">Delete task?</string>
    <string name="mark_completed">Mark completed</string>
    <string name="mark_uncompleted">Mark uncompleted</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_dynamic_colors">Dynamic colors</string>
    <string name="settings_title">Settings</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out_warning">Log out?</string>
    <string name="log_out_message">Your tasks and lists will not be accessible until you sign in</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="button_ok">OK</string>
</resources>